crates/tmark-writers/tests/snapshots/fixtures__fence-include-snippet@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
```python

```

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
