crates/tmark-writers/tests/snapshots/fixtures__fence-listing@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<figure id="lst:bubble" class="listing">
<div class="title">bubble_sort.py</div>
<pre><code class="language-python" data-linenums="1" data-hl-lines="2-3">def bubble_sort(items): ...
</code></pre>
<figcaption><span class="caption-label">Listing 1</span> Bubble sort, naive version.</figcaption>
</figure>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
