crates/tmark-writers/tests/snapshots/fixtures__fence-listing@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-code(title: [bubble\_sort.py], linenums: 1, hl-lines: ("2-3",), caption: [Bubble sort, naive version.])[
```python
def bubble_sort(items): ...
```
] <lst:bubble>

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
