crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-config@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{table}[H]
\centering
\caption{Config.}
\label{tbl:cfg}
\vspace{0.5em}
\begin{tabularx}{\linewidth}{l>{\raggedleft\arraybackslash}X>{\centering\arraybackslash}X}
\toprule
A & B & C \\
\midrule
1 & 2 & 3 \\
\bottomrule
\end{tabularx}
\end{table}

---requires---
{
  "packages": [
    "booktabs",
    "float",
    "tabularx"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
