crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-named@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<table>
<thead>
<tr>
<th rowspan="2">Product</th>
<th colspan="2">FY23</th>
<th colspan="2">FY24</th>
</tr>
<tr>
<th>Q1</th>
<th>Q2</th>
<th>Q1</th>
<th>Q2</th>
</tr>
</thead>
<tbody>
<tr>
<td>Apples</td>
<td>1</td>
<td>2</td>
<td>3</td>
<td>4</td>
</tr>
<tr class="separator"><td colspan="5"><em>Stone fruit</em></td></tr>
<tr>
<td>Cherries</td>
<td></td>
<td>5</td>
<td></td>
<td></td>
</tr>
<tr>
<td>2024</td>
<td></td>
<td></td>
<td>6</td>
<td>7</td>
</tr>
</tbody>
</table>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
