crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-named@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 5,
  align: (left, left, left, left, left,),
  table.header(table.cell(rowspan: 2)[Product], table.cell(colspan: 2, align: center)[FY23], table.cell(colspan: 2, align: center)[FY24], [Q1], [Q2], [Q1], [Q2]),
  [Apples], [1], [2], [3], [4],
  table.hline(),
  table.cell(colspan: 5)[_Stone fruit_],
  [Cherries], [], [5], [], [],
  [2024], [], [], [6], [7],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
